# acc

./: .gitignore  .gitlab-ci.yml  CITATION.cff  DEV.md  MANIFEST.in  README.md  environment.yml  pyproject.toml  setup.py
.github/workflows/: CI.yml  numba-0.53.1.patch  patch_numba.py
.gitlab/: deps.yml  runner-config-inception.toml
.gitlab/docker/: Dockerfile
acc/: E_Q_scattering_kernel.py  __init__.py  _numba.py  arrowINtersection.py  arrow_intersection.py  config.py  neutron.py  patch_numba.py  random.py  run_script.py  test.py  test_E_Q_scattering_kernel.py  test_arrowINtersection.py  test_pcal.py  vec3.py
acc/.obsolete/: cylindrical_object.py
acc/_numba_patches/: numba-0.56.4.patch
acc/components/: ComponentBase.py  StochasticComponentBase.py  __init__.py  guide.py
acc/geometry/: __init__.py  _utils.py  arrow_intersect.py  composite.py  composite_3.py  locate.py  location.py  numpy_plane.py  onbox.py  oncylinder.py  onsphere.py  plane.py  propagation.py
docs/: check_speed.md
tests/: .gitignore  UN_ms_timings_EPYC_7662_vs_RTX_3080.txt  UN_ms_timings_i7_4790K_vs_GTX_1660.txt  UN_speed_check.yml  acc_sgm_instrument.py  acc_sgm_instrument_compiled.py  check_speed.py  chess_test_instrument.py  chess_test_instrument_cpu.py  chess_test_instrument_cpu2.py  cuda_acc_sgm_instrument.py  hms_speed_check.yml  hms_timings_i7_4790K_vs_GTX_1660.txt  sgm.instr  tapered_speed_check.json  test_E_Q_scattering_kernel.py  test_array_in_closure.py  test_arrowINtersection.py  test_chess.py  test_coord_transform_among_comps.py  test_run_script.py  test_vec3.py
(+287 files in other folders)
