[project]
name = "mcvine.acc"
description = "GPU Accelerated MCViNE"
keywords = ["instrument", "neutron", "Monte Carlo"]
dynamic = ["version", "authors", "license"]
requires-python = ">=3.8"
dependencies = [
    "numba"
]

[build-system]
requires = [
    "setuptools >= 42",
    "versioningit"
]
build-backend = "setuptools.build_meta"

[tool.versioningit.vcs]
method = "git"
default-tag = "0.1.0"

[tool.versioningit.write]
file = "acc/_version.py"
